--- a/astro-site/src/pages/nora/en/privacy.astro
+++ b/astro-site/src/pages/nora/en/privacy.astro
@@ -150,7 +150,7 @@ const sections = t.privacy.sections;
       </div>
 
       <footer class="privacy-article-footer">
-        <p>{t.privacy.contact}</p>
+        <p set:html={t.privacy.contact} />
       </footer>
     </article>
   </main>
