--- a/astro-site/src/styles/global.css
+++ b/astro-site/src/styles/global.css
@@ -3129,9 +3129,11 @@ body.reflective-space-exited {
 }
 
 .nora-footer-lang-switcher .lang-current {
-  color: rgba(255, 255, 255, 0.9);
+  color: #fff;
   font-size: 12px;
-  font-weight: 500;
+  font-weight: 600;
+  text-decoration: underline;
+  text-underline-offset: 3px;
 }
 
 /* Tablet */
