--- a/astro-site/src/pages/nora/no/index.astro
+++ b/astro-site/src/pages/nora/no/index.astro
@@ -1,4 +1,6 @@
 ---
+export const prerender = true;
+
 import BaseLayout from '../../../layouts/BaseLayout.astro';
 import TrustIndicators from '../../../components/TrustIndicators.astro';
 import { getTranslations } from '../../../i18n';
